Implemented CRUD-Operations for Sync